# GeometricAlgebraSandbox

./: Cargo.toml
src/: circle_shader.wgsl  evaluation.rs  lexer.rs  main.rs  multivector.rs  objects.wgsl  parsing.rs  quad_shader.wgsl  rendering.rs
